# raylib-template

./: .clang-format  .cmake-format  .gitmodules  CMakeLists.txt  configure.sh
.github/: README.md
cmake/: CPM.cmake
scripts/: build.sh  setup.sh
src/: main.c
