CMAKE_MINIMUM_REQUIRED (VERSION 3.13)
PROJECT (
    __raylib-template__
    LANGUAGES C CXX
    VERSION 1.0.0)

SET (CMAKE_EXPORT_COMPILE_COMMANDS ON)

INCLUDE (cmake/CPM.cmake)
CPMGH (raysan5/raylib 5ecc289)

ADD_EXECUTABLE (
    ${PROJECT_NAME}
    src/main.c)
TARGET_LINK_LIBRARIES (${PROJECT_NAME} raylib)
TARGET_INCLUDE_DIRECTORIES (${PROJECT_NAME} PUBLIC include)
